fixed nav spacing for dropdown only

--- a/main.css
+++ b/main.css
@@ -7,9 +7,9 @@ body {
     color: #4d4d4d;
 }
 
-body:hover .dropdown {
+/* body:hover .dropdown {
     display: none;
-}
+} */
 
 .nav, h1, h2, h3, footer, button, h4, .skills  {
     font-family: 'Quicksand', sans-serif;  
@@ -31,7 +31,6 @@ p {
 .nav a {
     color: #4d4d4d;
     text-decoration: none;
-    padding: 10%;
 }
 
 nav a:hover {
@@ -329,6 +328,7 @@ li {
 .dropdown a {
     /* background-color: aqua; */
     /* color: #B57BA6; */
+    padding: 10%;
     color: #4D4D4D;
     font-size: .9em;
     display: block;
